--- a/Falldown/FalldownViewController.xib
+++ b/Falldown/FalldownViewController.xib
@@ -6,6 +6,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="FalldownViewController">
             <connections>
+                <outlet property="scoreLabel" destination="rKu-n3-r7B" id="wi2-ac-8wP"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -13,8 +14,20 @@
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="100" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rKu-n3-r7B">
+                    <rect key="frame" x="138.5" y="20" width="43.5" height="28"/>
+                    <fontDescription key="fontDescription" name="Menlo-Regular" family="Menlo" pointSize="24"/>
+                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
+            </subviews>
             <color key="backgroundColor" red="0.63529411764705879" green="0.65490196078431373" blue="0.55294117647058827" alpha="1" colorSpace="calibratedRGB"/>
             <gestureRecognizers/>
+            <constraints>
+                <constraint firstAttribute="centerX" secondItem="rKu-n3-r7B" secondAttribute="centerX" id="XRZ-w2-S8M"/>
+                <constraint firstItem="rKu-n3-r7B" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="20" id="ZSX-uW-Dqo"/>
+            </constraints>
             <point key="canvasLocation" x="340" y="425"/>
         </view>
     </objects>
